--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,9 +109,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtAdress" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="332dp"
-        android:layout_height="372dp"
+    <ListView
+        android:id="@+id/lblTexto"
+        android:layout_width="377dp"
+        android:layout_height="410dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
