--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,7 +110,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtAdress" />
 
     <ListView
-        android:id="@+id/lblTexto"
+        android:id="@+id/lstEmpresas"
         android:layout_width="377dp"
         android:layout_height="410dp"
         app:layout_constraintBottom_toBottomOf="parent"
