--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,18 +72,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Entrar"
-        app:layout_constraintBottom_toTopOf="@+id/btnDeslogar"
+        app:layout_constraintBottom_toTopOf="@+id/btnEmpresasAprovadas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblStatus"
         app:layout_constraintVertical_bias="0.646" />
 
     <Button
-        android:id="@+id/btnDeslogar"
+        android:id="@+id/btnEmpresasAprovadas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
-        android:text="Deslogar"
+        android:text="Empresas Aprovadas"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -98,6 +98,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.56"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnDeslogar"
+        app:layout_constraintTop_toBottomOf="@+id/btnEmpresasAprovadas"
         app:layout_constraintVertical_bias="0.44" />
 </androidx.constraintlayout.widget.ConstraintLayout>
